{
  "version": 4,
  "terraform_version": "1.2.4",
  "serial": 34,
  "lineage": "7f6c7957-a87b-a134-df68-77092057bf6a",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "lab3",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/60fa4fb2-393c-4d60-a4d8-10f8bfd554b2/resourceGroups/RG3/providers/Microsoft.Network/networkInterfaces/lab3-nic",
            "internal_domain_name_suffix": "qijhalsokhjejj50x4ittkkdfa.ax.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.1.1.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/60fa4fb2-393c-4d60-a4d8-10f8bfd554b2/resourceGroups/RG3/providers/Microsoft.Network/publicIPAddresses/lab3-publicip",
                "subnet_id": "/subscriptions/60fa4fb2-393c-4d60-a4d8-10f8bfd554b2/resourceGroups/RG3/providers/Microsoft.Network/virtualNetworks/lab3-vnet/subnets/lab3-subnet"
              }
            ],
            "location": "westeurope",
            "name": "lab3-nic",
            "private_ip_address": "10.1.1.4",
            "private_ip_addresses": [
              "10.1.1.4"
            ],
            "resource_group_name": "RG3"
          },
          "dependencies": [
            "azurerm_public_ip.lab3_publicip",
            "azurerm_resource_group.RG3",
            "azurerm_subnet.lab3_subnet",
            "azurerm_virtual_network.lab3_vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "lab3_SecurityGroup",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/60fa4fb2-393c-4d60-a4d8-10f8bfd554b2/resourceGroups/RG3/providers/Microsoft.Network/networkSecurityGroups/lab3-SecurityGroup",
            "location": "westeurope",
            "name": "lab3-SecurityGroup",
            "resource_group_name": "RG3",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "",
                "destination_port_ranges": [
                  "3389"
                ],
                "direction": "Inbound",
                "name": "WebAdminNSG",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "Internet",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.RG3"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "lab3_publicip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "id": "/subscriptions/60fa4fb2-393c-4d60-a4d8-10f8bfd554b2/resourceGroups/RG3/providers/Microsoft.Network/publicIPAddresses/lab3-publicip",
            "idle_timeout_in_minutes": 4,
            "ip_version": "IPv4",
            "location": "westeurope",
            "name": "lab3-publicip",
            "resource_group_name": "RG3",
            "sku": "Basic",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "azurerm_resource_group.RG3"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_route_table",
      "name": "lab3_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "disable_bgp_route_propagation": false,
            "id": "/subscriptions/60fa4fb2-393c-4d60-a4d8-10f8bfd554b2/resourceGroups/RG3/providers/Microsoft.Network/routeTables/lab3-route-table",
            "location": "westeurope",
            "name": "lab3-route-table",
            "resource_group_name": "RG3",
            "route": [
              {
                "address_prefix": "0.0.0.0/0",
                "name": "routeinternet",
                "next_hop_in_ip_address": "",
                "next_hop_type": "Internet"
              },
              {
                "address_prefix": "10.1.0.0/16",
                "name": "routelocal",
                "next_hop_in_ip_address": "",
                "next_hop_type": "VnetLocal"
              }
            ],
            "subnets": [],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.RG3"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "lab3_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.1.1.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/60fa4fb2-393c-4d60-a4d8-10f8bfd554b2/resourceGroups/RG3/providers/Microsoft.Network/virtualNetworks/lab3-vnet/subnets/lab3-subnet",
            "name": "lab3-subnet",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "RG3",
            "virtual_network_name": "lab3-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.RG3",
            "azurerm_virtual_network.lab3_vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "lab3_nsg_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/60fa4fb2-393c-4d60-a4d8-10f8bfd554b2/resourceGroups/RG3/providers/Microsoft.Network/virtualNetworks/lab3-vnet/subnets/lab3-subnet",
            "network_security_group_id": "/subscriptions/60fa4fb2-393c-4d60-a4d8-10f8bfd554b2/resourceGroups/RG3/providers/Microsoft.Network/networkSecurityGroups/lab3-SecurityGroup",
            "subnet_id": "/subscriptions/60fa4fb2-393c-4d60-a4d8-10f8bfd554b2/resourceGroups/RG3/providers/Microsoft.Network/virtualNetworks/lab3-vnet/subnets/lab3-subnet"
          },
          "dependencies": [
            "azurerm_network_security_group.lab3_SecurityGroup",
            "azurerm_resource_group.RG3",
            "azurerm_subnet.lab3_subnet",
            "azurerm_virtual_network.lab3_vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_route_table_association",
      "name": "lab3_subnet_rta",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/60fa4fb2-393c-4d60-a4d8-10f8bfd554b2/resourceGroups/RG3/providers/Microsoft.Network/virtualNetworks/lab3-vnet/subnets/lab3-subnet",
            "route_table_id": "/subscriptions/60fa4fb2-393c-4d60-a4d8-10f8bfd554b2/resourceGroups/RG3/providers/Microsoft.Network/routeTables/lab3-route-table",
            "subnet_id": "/subscriptions/60fa4fb2-393c-4d60-a4d8-10f8bfd554b2/resourceGroups/RG3/providers/Microsoft.Network/virtualNetworks/lab3-vnet/subnets/lab3-subnet"
          },
          "dependencies": [
            "azurerm_resource_group.RG3",
            "azurerm_route_table.lab3_route_table",
            "azurerm_subnet.lab3_subnet",
            "azurerm_virtual_network.lab3_vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "lab3_vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.1.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "2e701282-514e-44d2-a7fa-bf9139a94328",
            "id": "/subscriptions/60fa4fb2-393c-4d60-a4d8-10f8bfd554b2/resourceGroups/RG3/providers/Microsoft.Network/virtualNetworks/lab3-vnet",
            "location": "westeurope",
            "name": "lab3-vnet",
            "resource_group_name": "RG3"
          },
          "dependencies": [
            "azurerm_resource_group.RG3"
          ]
        }
      ]
    }
  ]
}